--- a/docs/04js输入输出语句.md
+++ b/docs/04js输入输出语句.md
@@ -8,7 +8,7 @@
 
 ### alert
 
-==浏览器弹出警示框==，多个alert弹窗可以==依次==在浏览器弹出
+`浏览器弹出警示框`，多个alert弹窗可以`依次`在浏览器弹出
 
 ```
     <script>
@@ -19,7 +19,7 @@
 
 ### console.log
 
-==浏览器控制台打印输出信息==
+`浏览器控制台打印输出信息`
 
 ```
     <script>
@@ -30,7 +30,7 @@
 
 ### prompt
 
-==浏览器弹出输入框，用户可以输入==
+`浏览器弹出输入框，用户可以输入`
 
 ```
     <script>
