--- a/docs/05变量.md
+++ b/docs/05变量.md
@@ -35,7 +35,7 @@
     </script>
 ```
 
-- =====用来把右边的值赋给左边的变量空间中，代表赋值的意思
+- `=`用来把右边的值赋给左边的变量空间中，代表赋值的意思
 - 变量值是保存到变量空间的值。
 
 
@@ -52,10 +52,10 @@
   </script>
 ```
 
-- 声明一个变量并赋值，我们称之为==变量的初始化==
+- 声明一个变量并赋值，我们称之为`变量的初始化`
 - 写法简介，代码量少。
 
-注意：变量不要使用==name==，name是关键字。
+注意：变量不要使用`name`，name是关键字。
 
 
 
@@ -148,7 +148,7 @@
 
 ##### 5.3声明变量的特殊情况
 
-###### 只声明，不赋值，输出结果为==undefined==
+###### 只声明，不赋值，输出结果为`undefined`
 
 ```
     <script>
@@ -157,7 +157,7 @@
     </script>
 ```
 
-###### 不声明，不赋值，直接使用，输出结果显示为==报错==
+###### 不声明，不赋值，直接使用，输出结果显示为`报错`
 
 ```
     <script>
@@ -169,7 +169,7 @@
 
 ![image-20211213164027263](05变量.assets/image-20211213164027263.png)
 
-###### 不声明，只赋值，输出结果为==本身的值==，因为JavaScript语言是一个弱类型语言。
+###### 不声明，只赋值，输出结果为`本身的值`，因为JavaScript语言是一个弱类型语言。
 
 ```
     <script>
