--- a/docs/08数据类型转换.md
+++ b/docs/08数据类型转换.md
@@ -42,7 +42,7 @@
 
 #### parselnt(string)函数
 
-将**string类型**转成**==整数==数值型**
+将**string类型**转成`整数数值型`
 
 ```
     <script>
@@ -53,8 +53,8 @@
         console.log(parseInt(b));   //123123,数值类型
         var c = '3.1415926';
         console.log(parseInt(c));   //3,因为parseInt是取整
-        consolo.log(parseInt('120px'));  //120,会去掉单位值
-        consolo.log(parseInt('px120px'));   //NaN
+        console.log(parseInt('120px'));  //120,会去掉单位值
+        console.log(parseInt('px120px'));   //NaN
     </script>
 ```
 
@@ -94,7 +94,7 @@
         var a = '12'-0;
         var b = '10' * 2;
         var c = '10' /5;
-        var d = '100' - '80';  
+        var d = '100' - '80';  	//20,数值类型
         console.log(a); //12
         console.log(b); //20
         console.log(c); //2
@@ -165,7 +165,7 @@
 | ------------- | ------------------ | ---------------- |
 | Boolean()函数 | 其他类型转成布尔值 | Boolean(‘true’); |
 
-- 代表空，否定的值会被转换为false，如 ’ ’ , 0, NaN , null , undefined
+- 代表空，否定的值会被转换为false，如 ' ' , 0, NaN , null , undefined
 - 其余的值都会被被转换为true
 
 ```
