--- a/docs/11循环.md
+++ b/docs/11循环.md
@@ -168,7 +168,7 @@ sum = sum + i;
 
 
 
-###### 案例2：求1~100之间所有数的平均值（5050/100=50.5 答案50.5）
+###### 案例2：求1~100之间所有数总和的平均值（5050/100=50.5 答案50.5）
 
 思路：
 
