--- a/docs/10流程控制.md
+++ b/docs/10流程控制.md
@@ -248,8 +248,8 @@ switch(表达式){
             console.log(3);
     }
     //1.开发里面，表达式我们经常写变量。
-    //2.我们num的值和case里面的值相匹配的时候是 全等 === ，必须是值和数据类型一直才可以 num === 1;
-    //3.break如果当前的case里面没有break ，则不会推迟switch，会执行下一个case。
+    //2.我们num的值和case里面的值相匹配的时候是 全等 === ，必须是值和数据类型一致才可以 num === 1;
+    //3.break如果当前的case里面没有break ，则不会退出switch，会执行下一个case。
 </script>
 ```
 
@@ -288,6 +288,7 @@ switch(表达式){
                 break;
             case '榴莲':
                 console.log('榴莲不好吃');
+                break;
             default:
                 alert('无，我只有两个。');
         }
