--- a/docs/12数组.md
+++ b/docs/12数组.md
@@ -94,7 +94,7 @@ var arr = ['甲','已','丙','丁'];
 
 
 
-#### 遍历数组
+### 遍历数组
 
 从头到尾将数组元素访问一遍。
 
@@ -174,7 +174,7 @@ alert(arrStus.length);  // 3
 
 
 
-#### 案例：求数组[2,6,1,7,4]里面所有元素的和以及平均值。
+##### 案例1：求数组[2,6,1,7,4]里面所有元素的和以及平均值。
 
 ```
     <script>
@@ -195,3 +195,216 @@ alert(arrStus.length);  // 3
     </script>
 ```
 
+
+
+##### 案例2：求数组[2,6,1,77,52,25,7]中的最大值
+
+```
+    <script>
+        // 求数组[2,6,1,77,52,25,7]中的最大值
+        // 声明一个保存最大元素的变量max
+        // 默认最大值可以取第一个数组的元素
+        // 遍历数组，将每个数组元素和 max 进行比较
+        // 如果这个数组元素大于 max ，就讲数组元素存在 max 里面，否则进行下一轮匹配
+        // 最后输入 max
+        var arr = [2,6,1,77,52,25,7];   
+        var max = arr[0];          //默认数组中的第一个元素为当前最大值。
+        for(var i = 0; i < arr.length; i++ ){   //遍历数组元素
+            if(arr[i] > max){       //当循环第一个数组元素时，如果数组元素大于默认的第一个值时，就通过变量更新，使 max 的值为6。通过 for 循环，依次进行判断。
+                max = arr[i];
+            }
+        }
+        console.log(max);           //循环完毕后，输入最大值为77   
+    </script>
+```
+
+
+
+##### 扩展案例：求数组[2,6,1,77,52,25,7]中的最小值
+
+```
+    <script>
+        // 求数组[2,6,1,77,52,25,7]中的最大值
+        // 声明一个保存最大元素的变量max
+        // 默认最大值可以取第一个数组的元素
+        // 遍历数组，将每个数组元素和 max 进行比较
+        // 如果这个数组元素大于 max ，就讲数组元素存在 max 里面，否则进行下一轮匹配
+        // 最后输入 max
+        var arr = [2,6,1,77,52,25,7];   
+        var min = arr[0];          //默认数组中的第一个元素为当前最小值。
+        for(var i = 0; i < arr.length; i++ ){   //遍历数组元素
+            if(arr[i] < min){       //当循环第一个数组元素时，如果数组元素小于默认的第一个值时，就通过变量更新，使 min 的值为2。通过 for 循环，依次进行判断。
+                min = arr[i];
+            }
+        }
+        console.log(min);           //循环完毕后，输入最小值为1   
+    </script>
+```
+
+
+
+##### 案例：数组转换为分割字符串，将数组  ['red','green','blue','pink']  转换为分割字符串，并且用 | 或者其他符号分割。
+
+```
+    <script>
+        // 数组转换为分割字符串，将数组  ['red','green','blue','pink']  转换为分割字符串，并且用 | 或者其他符号分割。
+        var arr = ['red','green','blue','pink'];
+        // 1、创建一个新变量
+        // 2、遍历原来的数组，分别把里面数据取出来，加到字符串里面，并且在后面加一个分隔符
+        var str = '';           // 1、创建一个空字符串
+        var a = '&'+'\t';       // 2、可以定义的连接符
+        for(var i = 0;i < arr.length; i++){            //遍历数组
+            str += arr[i]+a;        //更新字符变量
+        }
+        console.log(str);
+    </script>
+```
+
+
+
+### 数组中新增元素
+
+#### 通过修改length 长度新增数组元素（忽略）
+
+- 可以通过修改 length 长度来实现数组扩容的目的
+- length 属性是可读写的
+
+```
+    <script>
+        var arr = ['red', 'green', 'blue', 'pink'];
+        arr.length = 7;
+        console.log(arr);
+        console.log(arr[4]);
+        console.log(arr[5]);
+        console.log(arr[6]);
+	</script>
+```
+
+
+
+#### 通过修改数组索引新增数组元素
+
+- 可以通过修改数组索引的方式追加数组元素，`没有的索引值是新增，修改已有的索引值会替换掉之前的元素。`
+- 不能直接给数组名赋值，否则会覆盖掉以前的数据
+- 这种方式也是我们最常用的一种方式
+
+```
+    <script>
+        var arr = ['red', 'green', 'blue', 'pink'];
+        console.log(arr);   //'red', 'green', 'blue', 'pink'
+        arr[3] = 'demo';    
+        console.log(arr);    //'red', 'green', 'blue', 'pink','demo'
+        arr[4] = 'oooo';
+        console.log(arr);   //'red', 'green', 'blue', 'pink','demo','oooo'
+        arr[8] = '8888';
+        console.log(arr);   // ['red', 'green', 'blue', 'demo', 'oooo', 空属性 × 3, '8888'],索引靠后，之间会显示空的数组元素。
+        arr[0] = 'No red';
+        console.log(arr);   //['No red', 'green', 'blue', 'demo', 'oooo', 空属性 × 3, '8888'] ,修改已有的数组索引号，会替换掉之前的数组元素。
+        arr1 = '试一试';
+        console.log(arr1);  //试一试,直接给数组名赋值，等于更新数据，数组元素直接被修改为字符串。
+    </script>
+```
+
+##### 案例：数组新增元素。新建一个空数组，存放1-100的整数
+
+思路：
+
+1、声明一个空数组 arr
+
+2、循环中的计数器 i ，可以作为数组元素存入。
+
+3、由于数组的索引号是从0开始的，因此计数器从0 开始更合适，存入的数组元素需要加1，因为数组元素是从1开始的。
+
+```
+    <script>
+        var arr = [];   //创建一个空数组
+        for(var i = 0; i < 100; i++){       
+            arr[i] = i + 1;            //通过遍历数组，arr[i] 是数组的索引值， i+1 是数组元素的值。
+        }
+        console.log(arr);
+    </script>
+```
+
+##### 案例：将数组 [2, 0, 6, 1, 77, 0, 52, 0, 25, 7] 中大于等于 10 的元素选出来，放入新数组
+
+###### 方法一：思路
+
+①声明一个新的数组用于存放新数据。
+
+②遍历原来的数组，找出大于等于 10 的元素。
+
+③依次追加给新数组 newArr。
+
+```
+    <script>
+        // 案例：将数组 [2, 0, 6, 11, 77, 0, 52, 0, 25, 7] 中大于等于10的元素选出来，放入新数组。
+        // 1、声明一个新的数组用来存放新数据 newArr.
+        // 2、遍历原来的旧数组，使用 if 判断大于等于 10 的元素
+        // 3、依次存放到新数组中。
+        var arr = [2, 0, 6, 11, 77, 0, 52, 0, 25, 7];
+        // 定义一个变量 用来计算 新数组的索引号
+        var newArr = [];        
+        var j = 0;              
+        for (var i = 0; i < arr.length; i++) {
+        		//如果数组arr中的元素大于等于10时，就存放到新的数组中去，否则就不执行 if 中的语句。 2>=10 不成立，0>=10 不成立 6，1都不成立，11>=10 ,成立,依次类推，77，25都成立。
+            if (arr[i] >= 10) {     
+             		// 给新数组，newArr[0] = 11,第一个数组为11，  newArr[1] = 77, newArr[2] = 25         
+                newArr[j] = arr[i];  
+                // 索引号 不断自加
+                j++;        
+            }
+        }
+        console.log(newArr);    // 11,77,52,25
+    </script>
+```
+
+
+
+###### 方法二：思路
+
+```
+    <script>
+        var arr = [2, 0, 6, 1, 77, 0, 52, 0, 25, 7];
+        // 因为新数组为空，所以，数组的长度为0
+        var newArr = [];
+        for (var i = 0; i < arr.length; i++) {
+            if (arr[i] >= 10) {
+                // 给新数组,索引号应该从0开始，依次递增，newArr.length 的值是 0;
+                newArr[newArr.length] = arr[i];
+            }
+        }
+        console.log(newArr);
+    </script>
+```
+
+
+
+### 数组案例
+
+##### 案例1：删除指定数组元素（数组去重），将数组[2, 0, 6, 1, 77, 0, 52, 0, 25, 7]中的 0 去掉后，形成一个不包含 0 的新数组。
+
+思路：
+
+1、需要一个数组用于存放筛选之后的数据。
+
+2、遍历原来的数组，把不是0的数据添加到新数组里买呢（）
+
+3、新数组里面的个数，用length不断累加
+
+```
+    <script>
+        // 案例1：删除指定数组元素（数组去重），将数组[2, 0, 6, 1, 77, 0, 52, 0, 25, 7]中的 0 去掉后，形成一个不包含 0 的新数组。
+        var arr = [2, 0, 6, 1, 77, 0, 52, 0, 25, 7];
+        // 创建空的新数组，用来储存不包含0的新数组
+        var newArr = [];
+        // 遍历数组
+        for( var i = 0;i < arr.length; i++){    
+            // 如果 arr 的数组元素 不等于 0 ，第一次循环，2 不等于 0 ，成立，第二次循环 0 = 0 ，不执行if中的执行语句。依次类推。
+            if(arr[i] != 0){        
+                // newArr[0] = 2 ，
+                newArr[newArr.length] = arr[i];
+            }
+        }
+        console.log(newArr);    //for循环第一次循环，遍历出了，2,依次类推，将不包含0的元素排除掉即可。
+    </script>  
+```
