--- a/docs/12数组.md
+++ b/docs/12数组.md
@@ -260,7 +260,7 @@ alert(arrStus.length);  // 3
     </script>
 ```
 
-
+![image-20220307170622730](12数组.assets/image-20220307170622730.png)
 
 ### 数组中新增元素
 
@@ -292,16 +292,16 @@ alert(arrStus.length);  // 3
     <script>
         var arr = ['red', 'green', 'blue', 'pink'];
         console.log(arr);   //'red', 'green', 'blue', 'pink'
-        arr[3] = 'demo';    
+        arr[4] = 'demo';    
         console.log(arr);    //'red', 'green', 'blue', 'pink','demo'
-        arr[4] = 'oooo';
+        arr[5] = 'oooo';
         console.log(arr);   //'red', 'green', 'blue', 'pink','demo','oooo'
         arr[8] = '8888';
         console.log(arr);   // ['red', 'green', 'blue', 'demo', 'oooo', 空属性 × 3, '8888'],索引靠后，之间会显示空的数组元素。
         arr[0] = 'No red';
         console.log(arr);   //['No red', 'green', 'blue', 'demo', 'oooo', 空属性 × 3, '8888'] ,修改已有的数组索引号，会替换掉之前的数组元素。
-        arr1 = '试一试';
-        console.log(arr1);  //试一试,直接给数组名赋值，等于更新数据，数组元素直接被修改为字符串。
+        arr = '试一试';
+        console.log(arr);  //试一试,直接给数组名赋值，等于更新数据，数组元素直接被修改为字符串。
     </script>
 ```
 
@@ -324,6 +324,10 @@ alert(arrStus.length);  // 3
         console.log(arr);
     </script>
 ```
+
+![image-20220307172438214](12数组.assets/image-20220307172438214.png)
+
+
 
 ##### 案例：将数组 [2, 0, 6, 1, 77, 0, 52, 0, 25, 7] 中大于等于 10 的元素选出来，放入新数组
 
