--- a/docs/12数组.md
+++ b/docs/12数组.md
@@ -342,7 +342,7 @@ alert(arrStus.length);  // 3
 ```
     <script>
         // 案例：将数组 [2, 0, 6, 11, 77, 0, 52, 0, 25, 7] 中大于等于10的元素选出来，放入新数组。
-        // 1、声明一个新的数组用来存放新数据 newArr.
+        // 1、声明一个新的数组用来存放新数据 newArr。
         // 2、遍历原来的旧数组，使用 if 判断大于等于 10 的元素
         // 3、依次存放到新数组中。
         var arr = [2, 0, 6, 11, 77, 0, 52, 0, 25, 7];
@@ -362,7 +362,7 @@ alert(arrStus.length);  // 3
     </script>
 ```
 
-
+![image-20220308161919747](12数组.assets/image-20220308161919747.png)
 
 ###### 方法二：思路
 
@@ -381,7 +381,7 @@ alert(arrStus.length);  // 3
     </script>
 ```
 
-
+![image-20220308144634506](12数组.assets/image-20220308144634506.png)
 
 ### 数组案例
 
@@ -391,9 +391,9 @@ alert(arrStus.length);  // 3
 
 1、需要一个数组用于存放筛选之后的数据。
 
-2、遍历原来的数组，把不是0的数据添加到新数组里买呢（）
+2、遍历原来的数组，把不是0的数据添加到新数组里面去。
 
-3、新数组里面的个数，用length不断累加
+3、新数组里面的个数，用length不断累加。
 
 ```
     <script>
@@ -412,3 +412,72 @@ alert(arrStus.length);  // 3
         console.log(newArr);    //for循环第一次循环，遍历出了，2,依次类推，将不包含0的元素排除掉即可。
     </script>  
 ```
+
+![image-20220308150835061](12数组.assets/image-20220308150835061.png)
+
+
+
+##### 案例2：将数组 ['red','green','blue','pink'] 的内容翻过来存放。
+
+```
+    <script>
+        // 案例2：将数组 ['red','green','blue','pink'] 的内容翻过来存放。
+        // 1、声明一个新数组 
+        // 2、需要把旧数组索引号第3个取过来 （arr.length - 1）——>数组长度减1，给新数组索引号第0个元素（newArr.length）
+        // 3、因为需要需要翻转数组，索引是从3,2,1,0 依次递减的。所以需要采用 i-- 的方式。从3-2-1-0
+        var arr = ['red','green','blue','pink'];
+        var newArr = [];
+        for(var i = arr.length - 1;i >= 0;i--){
+            newArr[newArr.length] = arr[i];
+        }
+        console.log(newArr);
+    </script>
+```
+
+
+
+##### 复习案例：交换两个变量的值
+
+```
+    <script>
+        var a = 100;
+        var b = 1000;
+        var temp;
+        temp = a;
+        a = b;
+        b = temp;
+        console.log(a,b);
+    </script>
+```
+
+
+
+##### 案例3：数组排序（冒泡排序）<font color=red>了解</font>
+
+```
+    <script>
+        // 冒泡排序
+        var arr = [5,4,2,1,3];
+        for(var i = 0; i <= arr.length - 1;i++){    //外循环一次
+            for(var j = 0;j <= arr.length - i - 1;j++){     //内循环全部执行
+                if(arr[j] < arr[j+1]){
+                    var temp = arr[i];
+                    arr[j] = arr[j+1]
+                    arr[j+1] = temp;
+                }
+            }
+        }
+    </script>
+```
+
+### 回顾：
+
+1、为什么有数组
+
+2、如何创建数组
+
+3、如果获取数组中的元素
+
+4、是否会数组遍历
+
+5、是否会给数组新增元素。
