--- a/docs/13函数.md
+++ b/docs/13函数.md
@@ -362,3 +362,244 @@ return 语句之后的代码不被执行
 - `continue` ：跳出本次循环，继续执行下次循环(如for、while)
 - `return` ：不仅可以退出循环，还能够返回 return 语句中的值，同时还可以结束当前的函数体内的代码
 
+
+
+### arguments的使用
+
+当我们不确定有多少个参数传递的时候，可以用 `arguments` 来获取。在 JavaScript 中，arguments 实际上它是当前函数的一个内置对象。所有函数都内置了一个 `arguments` 对象，`arguments` 对象中存储了传递的所有实参。
+
+- **arguments**存放的是传递过来的实参
+- **arguments**展示形式是一个伪数组，因此可以进行遍历。伪数组具有以下特点
+  - 具有 length 属性
+  - 按索引方式储存数据
+  - 不具有数组的 push , pop 等方法
+
+###### 例子：
+
+```
+		<script>
+        // arguments的使用，只有函数才有arguments对象，而且每个函数都内置好了这个arguments；
+        // 函数声明
+        function fn() {
+            console.log(arguments);  //里面存储了所有传递过来的实参
+            console.log(arguments); // 3
+            console.log(arguments[2]); // 3
+        }
+        // 函数调用
+        fn(1,2,3);
+    </script>
+```
+
+```
+    <script>
+        // 可以按照数组的方式遍历arguments,来获取实际参数的个数
+        function fn() {
+            for(var i = 0;i < arguments.length;i++){
+                console.log(arguments[i]);
+            }
+        }
+        fn(10,11);
+        fn(1,2,3,4,5,6,7,8);
+    </script>
+```
+
+
+
+##### 案例：arguments的使用，利用函数求任意个数的最大值。
+
+```
+    <script>
+        // 使用arguments,来用函数求任意个数的最大值。
+        function getmax(){
+            var max = arguments[0];
+            for(var i = 1;i<arguments.length; i++){
+                if(arguments[i] > max){
+                    max = arguments[i];
+                }
+            }
+            return max;
+        }
+        var re = getmax(1,4,23,23,5,3,43);
+        var re1 = getmax(100,123,1231231123,123123);
+        console.log(re,re1);
+    </script>
+```
+
+#### 函数练习
+
+##### 案例1：利用函数封装方式，翻转任意一个数组
+
+```
+    <script>
+        function reverse(arr) {
+            var newArr = [];
+            for (var i = arr.length - 1; i >= 0; i--) {
+                newArr[newArr.length] = arr[i];
+            }
+            return newArr;
+        }
+        var arr1 = reverse([1, 3, 4, 6, 9]);
+        console.log(arr1);
+        var arr2 = reverse(['qwe','asd','zxv']);
+        console.log(arr2);
+    </script>
+```
+
+##### 案例2：利用函数封装方式，对数组排序 – 冒泡排序              <font  color=red>了解</font>
+
+```
+    <script>
+        function sort(arr) {
+            for (var i = 0; i < arr.length - 1; i++) {
+                for (var j = 0; j < arr.length - i - 1; j++) {
+                    if (arr[j] > arr[j+1]) { 
+                        var temp = arr[j];
+                        arr[j] = arr[j + 1]; 
+                        arr[j + 1] = temp;
+                    }
+                }
+            }
+            return arr;
+        }
+        var re = sort([5,7,3,8,1]);
+        console.log(re);
+    </script>
+```
+
+##### 案例3：输入一个年份，判断是否是闰年（闰年：能被4整除并且不能被100整数，或者能被400整除）
+
+```
+    <script>
+        // 利用函数判断是否为闰年，闰年特性，能被4整除并且不能被100整数，或者能被400整除
+        function getYear(year){
+            // 如果是闰年我们返回 true ，否则返回 false
+            var flag = false;
+            if(year % 4 == 0 && year % 100 != 0 || year % 400 == 0){
+                flag = true;
+            }
+            return flag;
+        }
+        var re = getYear(2000); //true
+        console.log(re);
+        var re2 = getYear(1999);    //false
+    </script>
+```
+
+### 函数可以调用另外一个函数
+
+每个函数都是独立的代码块，用于完成特殊任务，因此经常会用到函数相互调用的情况
+
+###### 例子：
+
+```
+    <script>
+        //函数是可以相互调用的
+        function fn1(){
+            console.log(11);
+            fn2();    
+        }
+        
+        function fn2(){
+            console.log(22);
+        }
+        fn1();
+    </script>
+```
+
+###### 例子：
+
+```
+    <script>
+        function fn1(){
+            console.log(111);
+            fn2();
+            console.log('fn1');
+        }
+        function fn2(){
+            console.log(222);
+            console.log('fn2');
+        }
+        fn1();
+    </script>
+```
+
+![image-20220310223432891](13函数.assets/image-20220310223432891.png)
+
+
+
+##### 案例：用户输入年份，输出当前年份2月份的天数，如果是闰年，则2月份是 29天， 如果是平年，则2月份是 28天
+
+```
+    <script>
+        function monthDay(){
+            var year = prompt('请输入年份');
+            if(getYear(year)){
+                alert('是闰年，2月有29天');
+            }else{
+                alert('是平年，2月有28天');
+            }
+        }
+        monthDay();
+
+         // 利用函数判断是否为闰年，闰年特性，能被4整除并且不能被100整数，或者能被400整除
+         function getYear(year){
+            // 如果是闰年我们返回 true ，否则返回 false
+            var flag = false;
+            if(year % 4 == 0 && year % 100 != 0 || year % 400 == 0){
+                flag = true;
+            }
+            return flag;
+        }
+    </script>
+```
+
+### 函数的两种声明方式
+
+#### 自定义函数方式（命名函数）
+
+利用函数关键字`function`自定义函数方式
+
+```
+		<script>
+        // 自定义函数（命名函数）
+        function 自定义函数名(){
+
+        }
+    </script>
+```
+
+1. **因为有名字，所以也被称为命名函数**
+2. **调用函数的代码既可以放到声明函数的前面，也可以放在声明函数的后面**
+
+#### 函数表达式方式(匿名函数)
+
+利用函数表达式方式的写法如下：
+
+```
+    <script>
+        var 变量名 = function(){
+	
+        }
+    </script>
+```
+
+###### 例子：
+
+```
+    <script>
+        var fn = function(a){
+            console.log('哈哈哈哈');
+            console.log(a);
+        }
+        fn('真好玩');
+    </script>
+```
+
+1、fun是变量名，不是函数名
+
+2、函数表达式声明方式和声明变量差不多，只不过变量里面存的是值，而函数表达式里面存放的是函数
+
+3、函数表达式也可以进行传递参数
+
+4、函数调用的代码必须写到函数体后面
+
