内置对象，部分更新

--- a/docs/14作用域.md
+++ b/docs/14作用域.md
@@ -45,7 +45,7 @@
 
 2. 在全局作用域下 `var` 声明的变量 是全局变量
 
-3. 特殊情况下，在函数内不使用 var 声明的变量也是全局变量（不建议使用）
+3. 特殊情况下，在函数内不使用 var 声明的变量也是全局变量`（不建议使用）`
 
    ```
       <script>
@@ -65,7 +65,7 @@
 
 在局部作用域下声明的变量叫做局部变量（**在函数内部定义的变量**）
 
-局部变来给你作用域：作用于函数内的代码环境，就是局部作用域。 因为跟函数有关系，所以也称为函数作用域
+局部变量作用域：作用于函数内的代码环境，就是局部作用域。 因为跟函数有关系，所以也称为函数作用域
 
 1. 局部变量只能在该函数内部使用
 
@@ -102,7 +102,7 @@
 
 3. 如果函数中还有函数，那么在这个作用域中就又可以诞生一个作用域
 
-4. 根据在内部函数可以访问外部函数变量的这种机制，用链式查找决定哪些数据能被内部函数访问，就称作作用域链
+4. 根据在`内部函数可以访问外部函数变量`的这种机制，用链式查找决定哪些数据能被内部函数访问，就称作`作用域链`
 
 5. 作用域链：采取**就近原则**的方式来查找变量最终的值。
 
