--- a/docs/15预解析.md
+++ b/docs/15预解析.md
@@ -32,11 +32,11 @@
 
 ### 变量预解析(变量提升)
 
-`JavaScript` 代码是由浏览器中的`JavaScript`解析器来执行的。JavaScript解析器在运行`JavaScript`代码的时候分为两部：`预解析`和代码执行
+`JavaScript` 代码是由浏览器中的`JavaScript`解析器来执行的。JavaScript解析器在运行`JavaScript`代码的时候分为两步：`预解析`和代码执行
 
 一、js引擎运行js分为两步：预解析  和代码执行
 
-1. 预解析 ：js引擎会把js里面所有的 var 还有  `function` 提升到当前作用域的前面
+1. 预解析 ：js引擎会把js里面所有的 var 还有  `function` 提升到`当前作用域`的前面
 2. 代码执行： 按照代码书写的顺序从上往下执行
 
 二、预解析分为 `变量预解析`（变量提升）和`函数预解析`（函数提升）
@@ -62,22 +62,20 @@
    **例子2：函数表达式（匿名函数）提升**
 
    ```
-    <script>
-           fn2();         //输出？  
-           var fn2 = function(){
-               console.log(222);       
-           }
+       <script>
            // fn2();
-   
-           // 以上代码相当于执行如下操作
-           var fn3;    //
-           fn3();
-           fn3 = function(){
+           // var fn2 = function demo() {
+           //     console.log(222);
+           // }
+           
+           
+           var fn3 = function() {
                console.log(333);
            }
+           fn3();
        </script>
    ```
-
+   
    
 
 2. 函数提升：函数的声明会被提升到**当前作用域**的最前面，但是不会调用函数。
