--- a/docs/13函数.md
+++ b/docs/13函数.md
@@ -171,13 +171,13 @@
 ```
     <script>
         function getSum(start,end){
-            sum = 0;
+            var sum = 0;
             for(var a = start;a <= end; a++){
                 sum += a;
             }
             console.log(sum);
         }
-        getSum(1,3)
+        getSum(1,3);
     </script>
 ```
 
@@ -207,7 +207,7 @@
 - 函数可以带参数也可以不带参数
 - 声明函数的时候，函数名括号里面的是形参，形参的默认值为 undefined
 - 调用函数的时候，函数名括号里面的是实参
-- 多个参数中间用逗号分隔
+- 多个参数中间用英文逗号分隔
 - 形参的个数可以和实参个数不匹配，但是结果不可预计，我们尽量要匹配
 
 ### 函数的返回值
@@ -366,9 +366,9 @@ return 语句之后的代码不被执行
 
 ### arguments的使用
 
-当我们不确定有多少个参数传递的时候，可以用 `arguments` 来获取。在 JavaScript 中，arguments 实际上它是当前函数的一个内置对象。所有函数都内置了一个 `arguments` 对象，`arguments` 对象中存储了传递的所有实参。
+当我们不确定有多少个参数传递的时候，可以用 `arguments` 来获取。在 JavaScript 中，arguments 实际上它是当前函数的一个内置对象。所有函数都内置了一个 `arguments` 对象，`arguments` 对象中存储了传递的所有`实参`。
 
-- **arguments**存放的是传递过来的实参
+- **arguments**存放的是传递过来的`实参`
 - **arguments**展示形式是一个伪数组，因此可以进行遍历。伪数组具有以下特点
   - 具有 length 属性
   - 按索引方式储存数据
@@ -420,14 +420,17 @@ return 语句之后的代码不被执行
             return max;
         }
         var re = getmax(1,4,23,23,5,3,43);
-        var re1 = getmax(100,123,1231231123,123123);
-        console.log(re,re1);
+        var re1 = getmax(100,123,1231231123,123123);        console.log(re,re1);
     </script>
 ```
 
 #### 函数练习
 
 ##### 案例1：利用函数封装方式，翻转任意一个数组
+
+回顾，利用for循环，翻转数组
+
+<img src="13函数.assets/image-20220315142625308.png" alt="image-20220315142625308" style="zoom: 200%;" />
 
 ```
     <script>
@@ -466,11 +469,11 @@ return 语句之后的代码不被执行
     </script>
 ```
 
-##### 案例3：输入一个年份，判断是否是闰年（闰年：能被4整除并且不能被100整数，或者能被400整除）
+##### 案例3：输入一个年份，判断是否是闰年（闰年：能被4整除并且不能被100整除，或者能被400整除）
 
 ```
     <script>
-        // 利用函数判断是否为闰年，闰年特性，能被4整除并且不能被100整数，或者能被400整除
+        // 利用函数判断是否为闰年，闰年特性，能被4整除并且不能被100整除，或者能被400整除
         function getYear(year){
             // 如果是闰年我们返回 true ，否则返回 false
             var flag = false;
@@ -595,7 +598,7 @@ return 语句之后的代码不被执行
     </script>
 ```
 
-1、fun是变量名，不是函数名
+1、fn是变量名，不是函数名
 
 2、函数表达式声明方式和声明变量差不多，只不过变量里面存的是值，而函数表达式里面存放的是函数
 
