--- a/docs/16对象.md
+++ b/docs/16对象.md
@@ -126,11 +126,11 @@
 
 #### 使用构造函数创建对象
 
-**构造函数** ：是一种特殊的函数，主要用来初始化对象，即为对象成员变量赋初始值，它总与 new 运算符一起使用。我们可以把对象中一些公共的属性和方法抽取出来，然后封装到这个函数里面。
+**构造函数** ：是一种特殊的函数，主要用来初始化对象，即为对象成员变量赋初始值，它总与 `new` 运算符一起使用。我们可以把对象中一些公共的属性和方法抽取出来，然后封装到这个函数里面。
 
 在 js 中，使用构造函数要时要注意以下两点：
 
-- 构造函数用于创建某一类对象，其首字母要大写
+- 构造函数用于创建某一类对象，`其首字母要大写`
 - 构造函数要和 new 一起使用才有意义
 
 ```
@@ -213,5 +213,4 @@
         }
     </script>
 ```
-
 
