--- a/docs/17内置对象.md
+++ b/docs/17内置对象.md
@@ -37,13 +37,13 @@ Math 对象不是构造函数，它具有数学常数和函数的属性和方法
 ```
 
 ```
-    <script>
-        function getMaxOfArray(numArray) {
-            return Math.max.apply(null, numArray);
-        }
-        var a = getMaxOfArray([1,0,23,123,1231234,5454545]);
-        console.log(a);
-    </script>
+      <script>
+          function getMaxOfArray(numArray) {
+              return Math.max.apply(null, numArray);
+          }
+          var a = getMaxOfArray([1,0,23,123,1231234,5454545]);
+          console.log(a);
+      </script>
 ```
 
 #### 封装自己的数学对象
@@ -588,4 +588,485 @@ console.log(Date.now());    //H5新增的方法，也是获取距离1970年1月1
 | reverse() | 颠倒数组中元素的顺序，无参数 | 该方法会改变原来的数组，返回新数组 |
 | sort()    | 对数组的元素进行排序         | 该方法会改变原来的数组，返回新数组 |
 
-水电费
+##### reverse()
+
+```
+ // 1、翻转数组
+        var arr = ['red','blue','green'];
+        arr.reverse();
+        console.log(arr);   // ['green', 'blue', 'red']
+```
+
+##### sort()
+
+sort() 对于个位数的使用
+
+```
+// 2、数组排序(冒泡排序)
+        var arr1 = [3,4,1,2,9];
+        arr1.sort();
+        console.log(arr1);  //[1, 2, 3, 4, 9]
+```
+
+sort()对于双位数的排序，因为sort()，进行排序的判定是从`第一个数字`进行判定的，所以在进行多位数判定时会出错。所以需要用到方法。<font color=red>学会使用</font>
+
+出错案例：
+
+```
+var arr2 = [2,31,23,41,9,0];
+arr2.sort();
+console.log(arr2);
+```
+
+解决方法
+
+```
+var arr2 = [2,31,23,41,9,0];
+arr2.sort(function(a,b){
+    return a - b; //升序的顺序排列
+    return b - a; //降序的排列
+});
+console.log(arr2);
+```
+
+#### 数组对象
+
+| 方法名        | 说明                                 | 返回值                                   |
+| ------------- | ------------------------------------ | ---------------------------------------- |
+| indexOf()     | 数组中查找该元素的第一个索引         | 如果存在返回索引号，如果不存在，则返回-1 |
+| lastIndexOf() | 在数组查找最后一个索引，从后向前索引 | 如果存在返回索引号，如果不存在，则返回-1 |
+
+1、返回数组元素索引号方法 indexOf(数组元素)  作用就是返回该数组元素的索引号,只返回第一个满足条件的索引号
+
+2、它只发返回第一个满足条件的索引号
+
+3、如果找不到元素，则返回-1
+
+```
+    <script>
+        //返回数组元素索引号方法 indexOf(数组元素)  作用就是返回该数组元素的索引号,只返回第一个满足条件的索引号，从前面开始查找
+        //它只发返回第一个满足条件的索引号
+        //如果找不到元素，则返回-1
+        var arr = ['red','green','blue','pink','blue'];
+        console.log(arr.indexOf('blue'));  // 2
+        // 返回数组元素索引号方法 indexOf(数组元素)  作用就是返回该数组元素的索引号,只返回第一个满足条件的索引号，从后面开始查找
+        console.log(arr.lastIndexOf('blue')); // 4
+    </script>
+```
+
+##### 案例：数组去重
+
+将数组中['c', 'a', 'z', 'a', 'x', 'a', 'x', 'c', 'b']，中相同的数组元素去掉。
+
+思路：
+
+①、将旧数组中不重复的元素放到新数组中，重复的元素只保留一个。
+
+②、遍历数组，用旧数组去查询新数组，如果该元素在新数组里面没有出现过，我们添加进去，否则就不添加。
+
+旧数组：['c', 'a', 'z', 'a', 'x', 'a', 'x', 'c', 'b']
+
+新数组：[ ]
+
+③、我们怎么知道该元素没有存在？ 利用 `新数组.indexOf(数组元素)` 如果返回是 `-1` 就说明 新数组里面没有该元素
+
+```
+    <script>
+        // 封装一个去重的函数 unique 独一无二的
+        function unique(arr) {
+            var newArr = [];
+            for (var i = 0; i < arr.length; i++) {
+                if (newArr.indexOf(arr[i]) === -1) {
+                    newArr.push(arr[i]);
+                }
+            }
+            return newArr;
+        }
+        var demo = unique(['c', 'a', 'z', 'a', 'x', 'a', 'x', 'c', 'b']);
+        var demo1 = unique(['blue','green','blue']);
+        console.log(demo);
+        console.log(demo1);
+    </script>
+```
+
+
+
+#### 数组转换为字符串
+
+| 方法名         | 说明                                       | 返回值         |
+| -------------- | ------------------------------------------ | -------------- |
+| toString()     | 把数组转换成字符串，逗号分隔每一项         | 返回一个字符串 |
+| join(‘分隔符’) | 方法用于把数组中的所有元素转换为一个字符串 | 返回一个字符串 |
+
+##### toString() 将我们的数组转换为字符串
+
+```
+    <script>
+        // 数组转换为字符串
+        // 1、toString() 将数组转换为字符串
+        var arr = [1,2,3];
+        console.log(arr.toString());
+    </script>
+```
+
+##### join(‘分隔符’)	
+
+```
+<script>
+      var arr = [1,2,3];
+      console.log(arr.join());    //括号里面不写值，默认使用逗号分割
+      console.log(arr.join('.')); //写值后，可以自定义分割符号
+      console.log(arr.join('&')); 
+</script>
+```
+
+
+
+### 字符串对象
+
+#### 基本包装类型<font color=red>了解</font>
+
+```
+    <script>
+        var str = 'abc';
+        console.log(str.length);
+        // 对象 才有属性和方法   复杂数据类型才有  属性和方法
+        // 简单数据类型为什么会有 length 属性呢？
+        //按道理基本数据类型是没有属性和方法的，而对象才有属性和方法，但上面代码却可以执行，这是因为 js 会把基本数据类型包装为复杂数据类型，其执行过程如下 ：
+        // js中的基本包装类型: 会把简单数据类型  包装成为了  复杂数据类型
+        // 1、把简单数据类型包装为复杂数据类型
+        var temp = new String('abc');   //使用 new String 创建的字符串为  复杂数据类型
+        // 2、通过临时变量的值 给 str
+        str = temp;
+        // 3、销毁这个临时变量
+        temp = null;
+    </script>
+```
+
+为了方便操作基本数据类型，JavaScript 还提供了三个特殊的引用类型：`String、Number和 Boolean`。
+
+**基本包装类型**就是把简单数据类型包装成为复杂数据类型，这样基本数据类型就有了属性和方法。
+
+
+
+#### 字符串的不可变性
+
+```
+    <script>
+        // 字符串的不可变性
+        var str = 'demo';
+        console.log(str);
+        str = 'new demo';
+        console.log(str);       //当字符串重新赋值后，会占用一块内存资源，当赋值的字符串过多后，内存占用过大，会造成电脑卡顿。
+        // 所以根据字符串的不可变性，不建议大量拼接字符串，大量拼接字符串会造成电脑卡顿。
+        var str = '';
+        for(var i = 1;i <= 1000000; i++){
+            str += i;
+        }
+        console.log(str);
+    </script>
+```
+
+
+
+#### 根据字符返回位置
+
+字符串所有的方法，都不会修改字符串本身(字符串是不可变的)，**操作完成会返回一个新的字符串**
+
+| 方法名                              | 说明                                                         |
+| ----------------------------------- | ------------------------------------------------------------ |
+| indexOf(‘要查找的字符’，开始的位置) | 返回指定内容在元字符串中的位置，如果找不到就返回-1，开始的位置是index索引号 |
+| lastIndexOf()                       | 从后往前找，只找第一个匹配的                                 |
+
+```
+    <script>
+        // 字符串对象  根据字符返回位置  str.indexOf('要查找的字符', [起始的位置])
+        var str = '改革春风吹满地，春天来了';
+        console.log(str.indexOf('春')); //默认从0开始查找 ，结果为2
+        console.log(str.indexOf('春', 3)); // 从索引号是 3的位置开始往后查找，结果是8
+    </script>
+```
+
+
+
+##### 案例：查找字符串 “abcoefoxyozzopp” 中所有o出现的位置以及次数
+
+- 核心算法：先查找第一个o出现的位置
+- 然后 只要 indexOf返回的结果不是 -1 就继续往后查找
+- 因为 indexOf 只能查找到第一个，所以后面的查找，一定是当前索引加1，从而继续查找
+
+```
+    <script>
+        // 查找字符串 “abcoefoxyozzopp” 中所有o出现的位置以及次数
+        // 核心算法：先查找第一个o出现的位置
+        // 然后 只要 indexOf返回的结果不是 -1 就继续往后查找
+        // 因为 indexOf 只能查找到第一个，所以后面的查找，一定是当前索引加1，从而继续查找
+        var str = "abcoefoxyozzopp";
+        var index = str.indexOf('o');   //3
+        var num = 0;
+        // console.log(index);
+        while (index !== -1) {
+            console.log(index);
+            num++;
+            index = str.indexOf('o', index + 1);
+        }
+        console.log('o出现的次数是: ' + num);
+    </script>
+```
+
+
+
+#### 根据位置返回字符
+
+| 方法名            | 说明                                     | 使用                        |
+| ----------------- | ---------------------------------------- | --------------------------- |
+| charAt(index)     | 返回指定位置的字符(index字符串的索引号)  | str.charAt(0)               |
+| charCodeAt(index) | 获取指定位置处字符的ASCII码(index索引号) | str.charCodeAt(0)           |
+| str[index]        | 获取指定位置处字符                       | HTML,IE8+支持和charAt()等效 |
+
+##### charAt(index)	返回指定位置的字符(index字符串的索引号)
+
+```
+    <script>
+        var arr = 'andy';
+        console.log(arr.charAt(3)); //y
+        // 遍历所有字符
+        for(var i = 0;i < arr.length;i++){
+            console.log(arr .charAt(i));
+        }
+    </script>
+```
+
+##### charCodeAt(index)       获取指定位置处字符的ASCII码(index索引号)
+
+**ASCII码**：在计算机中，所有的数据在[存储](https://baike.baidu.com/item/存储)和运算时都要使用[二进制](https://baike.baidu.com/item/二进制/361457)数表示（因为计算机用[高电平](https://baike.baidu.com/item/高电平/9753092)和[低电平](https://baike.baidu.com/item/低电平/6946314)分别表示1和0），例如，像a、b、c、d这样的52个字母（包括大写）以及0、1等数字还有一些常用的符号（例如*、#、@等）在计算机中存储时也要使用[二进制数](https://baike.baidu.com/item/二进制数/108101)来表示，而具体用哪些二进制数字表示哪个符号，当然每个人都可以约定自己的一套（这就叫[编码](https://baike.baidu.com/item/编码)），而大家如果要想互相通信而不造成混乱，那么大家就必须使用相同的编码规则，于是美国有关的标准化组织就出台了ASCII[编码](https://baike.baidu.com/item/编码/80092)，统一规定了上述常用符号用哪些二进制数来表示。
+
+![image-20220317202643294](17内置对象.assets/image-20220317202643294.png)
+
+```
+    <script>
+        // charCodeAt(index)       获取指定位置处字符的ASCII码(index索引号)  目的：判断用户按下了那个键位
+        var str = 'andy';
+        console.log(str.charCodeAt(0));		//97
+    </script>
+```
+
+##### str[index]		获取指定位置处字符
+
+```
+    <script>
+    // str 是定义的变量名，可以自定义
+        var str = 'andy';
+        console.log(str[0]);		//a
+    </script>
+```
+
+
+
+##### 案例：判断一个字符串 “abcoefoxyozzopp” 中出现次数最多的字符，并统计其次数
+
+```
+    <script>
+        // 判断一个字符串 “abcoefoxyozzopp” 中出现次数最多的字符，并统计其次数
+        // 核心算法：利用 charAt() 遍历这个字符串
+        // 把每个字符都存储给对象， 如果对象没有该属性，就为1，如果存在了就 +1
+        // 遍历对象，得到最大值和该字符
+        // 有一个对象 来判断是否有该属性 对象['属性名']
+        var o = {
+            age: 18
+        }
+        if (o['sex']) {
+            console.log('里面有该属性');
+
+        } else {
+            console.log('没有该属性');
+
+        }
+
+        //  判断一个字符串 'abcoefoxyozzopp' 中出现次数最多的字符，并统计其次数。
+        // o.a = 1
+        // o.b = 1
+        // o.c = 1
+        // o.o = 4
+        // 核心算法：利用 charAt() 遍历这个字符串
+        // 把每个字符都存储给对象， 如果对象没有该属性，就为1，如果存在了就 +1
+        // 遍历对象，得到最大值和该字符
+        var str = 'abcoefoxyozzopp';
+        var o = {};
+        for (var i = 0; i < str.length; i++) {
+            var chars = str.charAt(i); // chars 是 字符串的每一个字符
+            if (o[chars]) { // o[chars] 得到的是属性值
+                o[chars]++;
+            } else {
+                o[chars] = 1;
+            }
+        }
+        console.log(o);
+        // 2. 遍历对象
+        var max = 0;
+        var ch = '';
+        for (var k in o) {
+            // k 得到是 属性名
+            // o[k] 得到的是属性值
+            if (o[k] > max) {
+                max = o[k];
+                ch = k;
+            }
+        }
+        console.log(max);
+        console.log('最多的字符是' + ch);
+</script>
+```
+
+
+
+#### 字符串操作方法(重点)
+
+| 方法名                  | 说明                                                         |
+| ----------------------- | ------------------------------------------------------------ |
+| concat(str1,str2,str3…) | concat() 方法用于连接两个或多个字符串。拼接字符串            |
+| substr(start,length)    | 从 start 位置开始(索引号), length 取的个数                   |
+| slice(start,end)        | 从 start 位置开始，截取到 end 位置 ，end 取不到 (两个都是索引号) |
+| substring(start,end)    | 从 start 位置开始，截取到 end 位置 ，end 取不到 (基本和 slice 相同，但是不接受负) |
+
+##### concat(str1,str2,str3…)		用于连接两个或多个字符串。拼接字符串
+
+```
+    <script>
+    	//  concat('字符串1','字符串2','字符串3'...)
+        var arr = 'string';
+        console.log(arr.concat('red'));         //stringred
+    </script>
+```
+
+
+
+##### substr(start,length)		从 start 位置开始(索引号), length 取的个数
+
+```
+    <script>
+        // substr('截取的起始位置','截取几个字符')
+        var str = '改革春风吹满地';
+        console.log(str.substr(2,2));   //春风 ,第一个2是索引号的2,从第几个开始，第二个2,是取几个字符
+    </script>
+```
+
+
+
+##### slice(start,end)		从 start 位置开始，截取到 end 位置 ，end 取不到 (两个都是索引号)
+
+```
+	 <script>
+        // slice('截取的起始位置','截取的截止位置，截止位置不取')		
+        // 从 start 位置开始，截取到 end 位置 ，end 取不到 (两个都是索引号)
+         var str = '改革春风吹满地';
+         console.log(str.slice(0,3));   //革春,0和3都是索引号
+    </script>
+```
+
+
+
+##### substring(start,end)		从 start 位置开始，截取到 end 位置 ，end 取不到 (基本和 slice 相同，但是不接受负)
+
+```
+    <script>
+        // substring('截取的起始位置','截取的截止位置，截止位置不取')		
+        // 从 start 位置开始，截取到 end 位置 ，end 取不到 (基本和 slice 相同，但是不接受负)
+        var str = '改革春风吹满地';
+        console.log(str.substring(0,2));    //改革,0和2都是索引号
+    </script>
+```
+
+
+
+#### replace()方法	用于在字符串中用一些字符替换另一些字符
+
+其使用格式：`replace(被替换的字符,要替换为的字符串)`
+
+```
+    <script>
+        // 1. 替换字符 replace('被替换的字符', '替换为的字符')  它只会替换第一个字符
+        var str = 'andyandy';
+        console.log(str.replace('a', 'b'));         //bndyandy
+        // 有一个字符串 'abcoefoxyozzopp'  要求把里面所有的 o 替换为 *
+        var str1 = 'abcoefoxyozzopp';
+        while (str1.indexOf('o') !== -1) {
+            str1 = str1.replace('o', '*');
+        }
+        console.log(str1);      //abc*ef*xy*zz*pp
+    </script>
+```
+
+
+
+#### split()方法       用于切分字符串，它可以将字符串切分为数组。在切分完毕之后，返回的是一个新数组。
+
+```
+    <script>
+        var str = 'a,b,c,d';
+        console.log(str.split(','));
+        // 返回的是一个数组 ['a', 'b', 'c', 'd']
+    </script>
+```
+
+
+
+```
+    <script>
+        // 2. 字符转换为数组 split('分隔符')    前面我们学过 join 把数组转换为字符串
+        var str2 = 'red, pink, blue';
+        console.log(str2.split(','));       //['red', ' pink', ' blue']
+        var str3 = 'red&pink&blue';
+        console.log(str3.split('&'));       //['red', 'pink', 'blue']
+    </script>
+```
+
+
+
+#### 大小写转换
+
+##### toUpperCase()		转换大写
+
+```
+    <script>
+        var arr = 'abc';
+        console.log(arr.toUpperCase(arr));  //ABC
+    </script>
+```
+
+##### toLowerCase()		转换小写
+
+```
+    <script>
+        var arr = 'ABC';
+        console.log(arr.toLowerCase(arr));  //abc
+    </script>
+```
+
+
+
+### 简单类型于复杂类型<font color=red>了解</font>
+
+简单类型又叫做基本数据类型或者`值类型`，复杂类型又叫做`引用类型`。
+
+- 值类型：简单数据类型/基本数据类型，在存储时变量中存储的是值本身，因此叫做值类型
+
+  - string ，number，boolean，undefined，null
+
+  - ```
+    <script>
+        // 简单数据类型 null  返回的是一个空的对象  object 
+        var timer = null;
+        console.log(typeof timer);
+        // 如果有个变量我们以后打算存储为对象，暂时没想好放啥， 这个时候就给 null 
+        // 1. 简单数据类型 是存放在栈里面 里面直接开辟一个空间存放的是值
+        // 2. 复杂数据类型 首先在栈里面存放地址 十六进制表示  然后这个地址指向堆里面的数据
+    </script>
+    ```
+
+    
+
+- 引用类型：复杂数据类型，在存储时变量中存储的仅仅是地址（引用），因此叫做引用数据类型
+
+  - 通过 new 关键字创建的对象（系统对象、自定义对象），如 Object、Array、Date等
+
